methode-1/logs/dag_id=dag_with_postgres_operator_v01/run_id=scheduled__2022-10-03T00:00:00+00:00/task_id=create_postgres_table/attempt=1.log
[2024-01-02T19:41:09.454+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-03T00:00:00+00:00 [queued]>
[2024-01-02T19:41:09.468+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-03T00:00:00+00:00 [queued]>
[2024-01-02T19:41:09.468+0100] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2024-01-02T19:41:09.487+0100] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2022-10-03 00:00:00+00:00
[2024-01-02T19:41:09.490+0100] {standard_task_runner.py:57} INFO - Started process 32622 to run task
[2024-01-02T19:41:09.505+0100] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'create_postgres_table', 'scheduled__2022-10-03T00:00:00+00:00', '--job-id', '13785', '--raw', '--subdir', '/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/methode-1/dags/dag_with_postgres.py', '--cfg-path', '/var/folders/gn/cr4yj18d1tv34pkws9v_kq1r0000gn/T/tmpc3sx0__d']
[2024-01-02T19:41:09.509+0100] {standard_task_runner.py:85} INFO - Job 13785: Subtask create_postgres_table
[2024-01-02T19:41:09.577+0100] {task_command.py:416} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-03T00:00:00+00:00 [running]> on host macbook-pro-de-user.local
[2024-01-02T19:41:10.190+0100] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='aida' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v01' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2022-10-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2022-10-03T00:00:00+00:00'
[2024-01-02T19:41:10.192+0100] {sql.py:274} INFO - Executing: 
            crete table if not exists dag_runs(
            dt date,
            dag_id character varying,
            primary key(dt, dag_id)
            )
        
[2024-01-02T19:41:10.200+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T19:41:10.509+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T19:41:10.634+0100] {sql.py:418} INFO - Running statement: 
            crete table if not exists dag_runs(
            dt date,
            dag_id character varying,
            primary key(dt, dag_id)
            )
        , parameters: None
[2024-01-02T19:41:10.637+0100] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "crete"
LINE 2:             crete table if not exists dag_runs(
                    ^

[2024-01-02T19:41:10.644+0100] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=create_postgres_table, execution_date=20221003T000000, start_date=20240102T184109, end_date=20240102T184110
[2024-01-02T19:41:10.658+0100] {standard_task_runner.py:104} ERROR - Failed to execute job 13785 for task create_postgres_table (syntax error at or near "crete"
LINE 2:             crete table if not exists dag_runs(
                    ^
; 32622)
[2024-01-02T19:41:10.719+0100] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-02T19:41:10.740+0100] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
